--- a/Config/1_novathesis.tex
+++ b/Config/1_novathesis.tex
@@ -13,7 +13,7 @@
 %%-------------------------------- ----------------------------
 %% THE MOST IMPORTANT/POPULAR OPTIONS
 %%------------------------------------------------------------
-% \ntsetup{docdegree=msc}       % The type of document
+\ntsetup{docdegree=msc}       % The type of document
 %                               %     [ phd, phdplan, phdprop, msc, mscplan, bsc, plain ]
 %                               % DEFAULT: docdegree=msc
 
@@ -58,7 +58,7 @@
 %                               %     cover and the book chapters
 %                               % DEFAULT: printfrontmatter=true
 
-% \ntsetup{printcommittee=true}% Shall the evaluation committee be printed?
+% \ntsetup{printcommittee=true}% Shall the evaluation committee be printed?         % se eu quiser meter comitê, tenho de meter isto true
 %                               %     the evaluation committee should only be
 %                               %     printed in final versions.
 %                               % DEFAULT: printcommittee=false
@@ -89,7 +89,7 @@
 %%------------------------------------------------------------
 %% THE LESS IMPORTANT/POPULAR OPTIONS
 %%------------------------------------------------------------
-% \ntsetup{docstatus=provisional}   % The status of the document
+\ntsetup{docstatus=provisional}   % The status of the document
 %                               %     [ final, provisional, draft, working ]
 %                               % DEFAULT: docstatus=final
 
