--- a/Config/7_packages.tex
+++ b/Config/7_packages.tex
@@ -17,6 +17,7 @@
 
 % \usepackage{indentfirst}       % Indent first list after a (sub)section title
 
+% quando ja nao houver codigo de joao lourenço, é apagar estes:
 \usepackage{wrapfig}      % FOR DEMO PURPOSES ONLY --- PLEASE REMOVE
 \usepackage{metalogo}     % FOR DEMO PURPOSES ONLY --- PLEASE REMOVE
 \usepackage{lipsum}       % FOR DEMO PURPOSES ONLY --- PLEASE REMOVE
