--- a/Config/3b_degree_msc.tex
+++ b/Config/3b_degree_msc.tex
@@ -13,12 +13,12 @@
 %         syntax: \ntdegreename(language){name}
 %%============================================================
 
-\ntdegreename(pt){\embrace{Nome do Curso de Mestrado}}
-\ntdegreename(en){\embrace{MSc Program Name}}
-\ntdegreename(de){\embrace{Name des Studienprogramms}}
-\ntdegreename(es){\embrace{Nombre del programa de estudios}}
-\ntdegreename(fr){\embrace{Nom du programme d'études}}
-\ntdegreename(it){\embrace{Nome del programma di studio}}
+% \ntdegreename(pt){\embrace{Nome do Curso de Mestrado}}
+% \ntdegreename(en){\embrace{MSc Program Name}}
+% \ntdegreename(de){\embrace{Name des Studienprogramms}}
+% \ntdegreename(es){\embrace{Nombre del programa de estudios}}
+% \ntdegreename(fr){\embrace{Nom du programme d'études}}
+% \ntdegreename(it){\embrace{Nome del programma di studio}}
 
 %\ntdegreename(pt){Análise e Engenharia de Big Data}
 %\ntdegreename(en){Analysis and Engineering of Big Data}
@@ -60,7 +60,7 @@
 %\ntdegreename(en){Civil Engineering}
 
 %\ntdegreename(pt){Engenharia Eletrotécnica e de Computadores}
-%\ntdegreename(en){Electrical and Computer Engineering}
+\ntdegreename(en){Electrical and Computer Engineering}
 
 %\ntdegreename(pt){Engenharia Física}
 %\ntdegreename(en){Physics Engineering}
