--- a/Config/4_department.tex
+++ b/Config/4_department.tex
@@ -14,8 +14,8 @@
 %         syntax: \ntdepartment(language){name}
 %%============================================================
 
-\ntdepartment(pt){Departamento de\\\embrace{Nome do Departamento}}
-\ntdepartment(en){Department of\\\embrace{Name of the Department}}
+% \ntdepartment(pt){Departamento de\\\embrace{Nome do Departamento}}
+% \ntdepartment(en){Department of\\\embrace{Name of the Department}}
 
 % \ntdepartment(pt){Departamento de Ciência\\dos Materiais}
 % \ntdepartment(en){Department of\\Materials Science}
@@ -42,7 +42,7 @@
 % \ntdepartment(en){Department of\\Civil Engineering}
 
 % \ntdepartment(pt){Departamento de Engenharia\\Eletrotécnica e de Computadores}
-% \ntdepartment(en){Department of Electrical\\and Computer Engineering}
+\ntdepartment(en){Department of Electrical\\and Computer Engineering}
 
 % \ntdepartment(pt){Departamento de Engenharia\\Mecânica e Industrial}
 % \ntdepartment(en){Department of Mechanical\\and Industrial Engineering}
