--- a/Config/5_cover.tex
+++ b/Config/5_cover.tex
@@ -13,8 +13,8 @@
 %%------------------------------------------------------------
 % Thesis/Dissertation title (valid for all languages unless redefined as below)
 %   syntax: \nttitle[lang]{title}
-\nttitle[en]{Design and implementation of a low-power RTK positioning\\base station for precise navigation}%
-\nttitle[pt]{     falta meter aqui    }%
+\nttitle[en]{Design and implementation of\\a low-power RTK positioning\\base station for precise navigation}%
+\nttitle[pt]{     falta meter aqui    }                         % é preciso meter?
 %   \nttitle{A Very Long and Impressive Thesis Title}%
 %   \nttitle[en]{The title in a Specific language}%
 
