--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -134,11 +134,12 @@
 % 1. Estudos prévios - Bibliografia
 
 % Creating Autonomous Vehicle Systems - about RTK Base Stations
-@BOOK{8093778,
+@Book{ 8093778,
   author={Liu, Shaoshan and Li, Liyun and Tang, Jie and Wu, Shuang and Gaudiot, Jean-Luc},
   booktitle={Creating Autonomous Vehicle Systems},
   year={2017},
   volume={},
   number={},
   pages={},
-  doi={}}
+  doi={}
+}
