--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -135,11 +135,12 @@
 
 % Creating Autonomous Vehicle Systems - about RTK Base Stations
 @Book{ 8093778,
-  author={Liu, Shaoshan and Li, Liyun and Tang, Jie and Wu, Shuang and Gaudiot, Jean-Luc},
-  booktitle={Creating Autonomous Vehicle Systems},
-  year={2017},
+  author= "Liu, Shaoshan and Li, Liyun and Tang, Jie and Wu, Shuang and Gaudiot, Jean-Luc",
+  title= "Creating Autonomous Vehicle Systems",
+  year="2017",
   volume={},
   number={},
   pages={},
   doi={}
 }
+
