--- a/Config/7_packages.tex
+++ b/Config/7_packages.tex
@@ -25,7 +25,26 @@
 \usepackage{algorithm2e}
 \RestyleAlgo{ruled}
 
-
+% ================================= PACKAGES METIDOS POR MIM: =======================================================
+\usepackage{graphicx}
+\usepackage{caption}
+\usepackage{epstopdf}
+\usepackage{fancyhdr}
+\usepackage{hyperref}
+\usepackage{listings}
+\usepackage{xcolor}
+\usepackage{enumerate}
+\usepackage{lipsum}
+\usepackage[notransparent]{svg} % usar isto para imagens .svg
+\usepackage{amsmath}            % usar isto para imagens .svg
+\usepackage{mathtools}
+\usepackage{float}
+\usepackage{array}
+\usepackage{soul}
+\usepackage{booktabs}
+\usepackage{bm}
+\usepackage{stackengine}
+% ===================================================================================================================
 
 % \usepackage{minted}    % Fontification of source code listings
 
