--- a/NOVAthesisFiles/packages.tex
+++ b/NOVAthesisFiles/packages.tex
@@ -75,6 +75,23 @@
 % \usetikzlibrary{backgrounds}
 % \RequirePackage{tikzpagenodes}
 
+% ================================= PACKAGES METIDOS POR MIM: =======================================================
+% \RequirePackage{graphicx}
+% \RequirePackage{caption}
+% \RequirePackage{subcaption}
+% \RequirePackage[notransparent]{svg} % usar isto para imagens .svg
+% \RequirePackage{amsmath}            % usar isto para imagens .svg
+% \RequirePackage{mathtools}
+% \RequirePackage{float}
+% \RequirePackage{array}
+% \RequirePackage{soul}
+% \RequirePackage{booktabs}
+% \RequirePackage{bm}
+% \RequirePackage{stackengine}
+% \def\delequal{\mathrel{\ensurestackMath{\stackon[1pt]{=}{\scriptstyle\Delta}}}}
+% \RequirePackage[american inductors]{circuitikz}
+% ===================================================================================================================
+
 
 % Refer to labels in external docuemnts
 % \RequirePackage{xr}
