--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -135,12 +135,101 @@
 
 % Creating Autonomous Vehicle Systems - about RTK Base Stations
 @Book{8093778,
-  author= "Liu, Shaoshan and Li, Liyun and Tang, Jie and Wu, Shuang and Gaudiot, Jean-Luc",
-  title= "Creating Autonomous Vehicle Systems",
-  year="2017",
-  volume={},
-  number={},
-  pages={},
-  doi={}
+	author	= "Liu, Shaoshan and Li, Liyun and Tang, Jie and Wu, Shuang and Gaudiot, Jean-Luc",
+	title	= "Creating Autonomous Vehicle Systems",
+	year	= "2017",
+	volume	= {},
+	number	= {},
+	pages	= {},
+	doi		= {}
 }
 
+% articles about: RTK / BASE STATIONS / DRONES
+
+@ARTICLE{8955794,
+	author	= {Pini, Marco and Marucco, Gianluca and Falco, Gianluca and Nicola, Mario and De Wilde, Wim},
+	journal	= {IEEE Access}, 
+	title	= {Experimental Testbed and Methodology for the Assessment of RTK GNSS Receivers Used in Precision Agriculture}, 
+	year	= {2020},
+	volume	= {8},
+	number	= {},
+	pages	= {14690-14703},
+	doi		= {10.1109/ACCESS.2020.2965741}
+}
+
+@INPROCEEDINGS{8714161,
+	autho		= {Świerczynski, Slawomir and Felski, Andrzej},
+	booktitle	= {2019 European Navigation Conference (ENC)}, 
+	title		= {Determination of the Position Using Receivers Installed in UAV}, 
+	year		= {2019},
+	volume		= {},
+	number		= {},
+	pages		= {1-4},
+	doi			= {10.1109/EURONAV.2019.8714161}
+}
+
+@INPROCEEDINGS{9292033,
+	author		= {Matsuura, Yuta and Heming, Zhang and Kawai, Shin and Nobuhara, Hajime},
+	booktitle	= {2020 IEEE 9th Global Conference on Consumer Electronics (GCCE)}, 
+	title		= {High-Precision/Throughput Growth Measurement of Crops by Drone with Stereo Matching Based on RTK-GNSS and Single Camera}, 
+	year		= {2020},
+	volume		= {},
+	number		= {},
+	pages		= {936-939},
+	doi			= {10.1109/GCCE50665.2020.9292033}
+}
+
+@INPROCEEDINGS{8642671,
+	author		= {Thevenon, Paul and Vezinet, Jérémy and Estrade, Patrick},
+	booktitle	= {2018 9th ESA Workshop on Satellite NavigationTechnologies and European Workshop on GNSS Signals and Signal Processing (NAVITEC)}, 
+	title		= {Estimation of the Base Station Position Error in a RTK Receiver Using State Augmentation in a Kalman Filter}, 
+	year		= {2018},
+	volume		= {},
+	number		= {},
+	pages		= {1-7},
+	doi			= {10.1109/NAVITEC.2018.8642671}
+}
+
+@INPROCEEDINGS{8909193,
+	author		= {Akarsu, Alper and Girici, Tolga},
+	booktitle	= {2019 International Symposium on Networks, Computers and Communications (ISNCC)}, 
+	title		= {Resilient Deployment of Drone Base Stations}, 
+	year		= {2019},
+	volume		= {},
+	number		= {},
+	pages		= {1-5},
+	doi			= {10.1109/ISNCC.2019.8909193}
+}
+
+@INPROCEEDINGS{6321639,
+	author		= {He, Meilin and Pan, Yuanjin and Wen, Hongyan and Luo, Manjian},
+	booktitle	= {World Automation Congress 2012}, 
+	title		= {Based on a single-base station RTK control survey and precision analysis}, 
+	year		= {2012},
+	volume		= {},
+	number		= {},
+	pages		= {1-4},
+	doi			= {}
+}
+
+@INPROCEEDINGS{8899609,
+	author		= {Ahmed, Mir Faisal and Naveed, Emad M. and Nar, Pratham and Jindal, Sumit Kumar},
+	booktitle	= {2019 International Conference on Vision Towards Emerging Trends in Communication and Networking (ViTECoN)}, 
+	title		= {Design of an Autonomous drone for IoT deployment analysis}, 
+	year		= {2019},
+	volume		= {},
+	number		= {},
+	pages		= {1-4},
+	doi			= {10.1109/ViTECoN.2019.8899609}
+}
+
+@INPROCEEDINGS{6423099,
+	author		= {Laitinen, Heikki and Granström, Juha and Ström, Mårten and Baños, David Jiménez},
+	booktitle	= {2012 6th ESA Workshop on Satellite Navigation Technologies (Navitec 2012)   European Workshop on GNSS Signals and Signal Processing}, 
+	title		= {RTK+ system for precise navigation in shadowed areas}, 
+	year		= {2012},
+	volume		= {},
+	number		= {},
+	pages		= {1-7},
+	doi			= {10.1109/NAVITEC.2012.6423099}
+}
