intro + bib  update

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -133,6 +133,24 @@
 
 % 1. Estudos prévios - Bibliografia
 
+% Agricultura:
+@article{Zeder2011TheOO,
+	title	= {The Origins of Agriculture in the Near East},
+	author  = {Melinda A. Zeder},
+	journal = {Current Anthropology},
+	year	= {2011},
+	volume	= {52},
+	pages	= {S221 - S235}
+}
+
+@Book{Roe1926,
+	author	  = "Joseph Wickham Roe",
+	title	  = "English and American Tool Builders",
+	year	  = "1926",
+	publisher = "McGraw-Hill Book Company, Inc.",
+	pages	  = {109 - 164}
+}
+
 % Creating Autonomous Vehicle Systems - about RTK Base Stations
 @Book{8093778,
 	author	= "Liu, Shaoshan and Li, Liyun and Tang, Jie and Wu, Shuang and Gaudiot, Jean-Luc",
