plano de escrita

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -131,9 +131,9 @@
 	publisher    = "Springer-Verlag",
 }
 
-% 1. Estudos prévios - Bibliografia
+% 1. Estudos prévios - Bibliografia =======================================
 
-% Agricultura:
+% Agricultura: -----------------------------------------
 @article{Zeder2011TheOO,
 	title	= {The Origins of Agriculture in the Near East},
 	author  = {Melinda A. Zeder},
@@ -148,8 +148,25 @@
 	title	  = "English and American Tool Builders",
 	year	  = "1926",
 	publisher = "McGraw-Hill Book Company, Inc.",
-	pages	  = {109 - 164}
-}
+}%	pages	  = {109 - 164}
+
+% GPS: --------------------------------------------------
+@Book{edseee_9101092,
+	author	  = {Groves, Paul D.},
+	title	  = {Principles of GNSS, Inertial, and Multisensor Integrated Navigation Systems, Second Edition},
+	year	  = "2013",
+	publisher = "Artech House",
+}% month = "March"; isbn = {9781608070060},
+
+@misc{ayers_geosystems_2011,
+	place	  = {Winnipeg},
+	title	  = {GNSS (GPS and GLONASS) Positioning used in Land Surveying and Engineering},
+	journal	  = {Joint AMLS/APEGM Professional Development Seminar on GPS Best Practices Workshop},
+	publisher = {Manitoba, Canada},
+	author	  = {Ayers, Henri B and Leica Geosystems Ltd.},
+	year	  = {2011},
+	month	  = {Jan}
+} 
 
 % Creating Autonomous Vehicle Systems - about RTK Base Stations
 @Book{8093778,
