description of the problem

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -133,7 +133,7 @@
 
 % 1. Estudos prévios - Bibliografia =======================================
 
-% Agricultura: -----------------------------------------
+% Agriculture, Infrastructure, Safety: -----------------------------------------
 @article{Zeder2011TheOO,
 	title	= {The Origins of Agriculture in the Near East},
 	author  = {Melinda A. Zeder},
@@ -149,6 +149,21 @@
 	year	  = "1926",
 	publisher = "McGraw-Hill Book Company, Inc.",
 }%	pages	  = {109 - 164}
+
+https://www.washingtonpost.com/world/2021/08/11/siberia-fires-russia-climate/
+@article{dixon_2021,
+	title	= {Siberia's wildfires are bigger than all the world's other blazes combined},
+	journal	= {The Washington Post},
+	author	= {Dixon, Robyn},
+	date    = {2021-08-11},
+}% url?
+
+@article{roth_2021,
+	title	= {Russia forest fire damage worst since records began, says Greenpeace},
+	journal	= {The Guardian},
+	author	= {Roth, Andrew},
+	date    = {2021-09-22},
+}% url?
 
 % GPS: --------------------------------------------------
 @Book{edseee_9101092,
