index, rascunho & table

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -150,7 +150,6 @@
 	publisher = "McGraw-Hill Book Company, Inc.",
 }%	pages	  = {109 - 164}
 
-https://www.washingtonpost.com/world/2021/08/11/siberia-fires-russia-climate/
 @article{dixon_2021,
 	title	= {Siberia's wildfires are bigger than all the world's other blazes combined},
 	journal	= {The Washington Post},
@@ -181,7 +180,15 @@ https://www.washingtonpost.com/world/2021/08/11/siberia-fires-russia-climate/
 	author	  = {Ayers, Henri B and Leica Geosystems Ltd.},
 	year	  = {2011},
 	month	  = {Jan}
-} 
+}
+
+@online{gps_USGov,
+	author	= {{National Coordination Office for Space-Based Positioning, Navigation, and Timing}},
+	title 	= {GPS Accuracy},
+	year 	= {2021},
+	url 	= {https://www.gps.gov/systems/gps/performance/accuracy/},
+	urldate = {2022-02-04}
+}
 
 % Creating Autonomous Vehicle Systems - about RTK Base Stations
 @Book{8093778,
