--- a/Config/7_packages.tex
+++ b/Config/7_packages.tex
@@ -31,6 +31,7 @@
 \usepackage{epstopdf}
 \usepackage{fancyhdr}
 \usepackage{hyperref}
+\usepackage{url}
 \usepackage{listings}
 \usepackage{xcolor}
 \usepackage{enumerate}
