--- a/Config/7_packages.tex
+++ b/Config/7_packages.tex
@@ -45,6 +45,9 @@
 \usepackage{booktabs}
 \usepackage{bm}
 \usepackage{stackengine}
+\usepackage{enumitem}
+\usepackage{makecell}
+\usepackage{multirow}
 % ===================================================================================================================
 
 % \usepackage{minted}    % Fontification of source code listings
