--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -215,7 +215,7 @@
 }
 
 @INPROCEEDINGS{8714161,
-	autho		= {Świerczynski, Slawomir and Felski, Andrzej},
+	author		= {Świerczynski, Slawomir and Felski, Andrzej},
 	booktitle	= {2019 European Navigation Conference (ENC)}, 
 	title		= {Determination of the Position Using Receivers Installed in UAV}, 
 	year		= {2019},
@@ -289,4 +289,35 @@
 	number		= {},
 	pages		= {1-7},
 	doi			= {10.1109/NAVITEC.2012.6423099}
+}
+
+% Battery:
+@article{ARMAND2020228708,
+	title	 = {Lithium-ion batteries - Current state of the art and anticipated developments},
+	journal	 = {Journal of Power Sources},
+	volume 	 = {479},
+	pages 	 = {228708},
+	year 	 = {2020},
+	issn 	 = {0378-7753},
+	doi 	 = {https://doi.org/10.1016/j.jpowsour.2020.228708},
+	author 	 = {Michel Armand, Peter Axmann, Dominic Bresser, Mark Copley, Kristina Edström, Christian Ekberg, Dominique Guyomard, Bernard Lestriez, Petr Novák, Martina Petranikova, Willy Porcher, Sigita Trabesinger, Margret Wohlfahrt-Mehrens and Heng Zhang}
+}
+	% Battery Technology Handbook - pg 289
+@book{kiehne2003,
+	title     = {Battery {T}echnology {H}andbook},
+	author    = {H.A. Kiehne},
+	editor    = {H.A. Kiehne},
+	year      = {2003},
+	publisher = {Marcel Dekker, Inc.},
+	address   = {New York}
+}
+
+	% FUTURO DAS BATERIAS 2030+
+@article{fichtner2021,
+	author	 = {Fichtner, Maximilian and Edström, Kristina and Ayerbe, Elixabete and Berecibar, Maitane and Bhowmik, Arghya and Castelli, Ivano E. and Clark, Simon and Dominko, Robert and Erakca, Merve and Franco, Alejandro A. and Grimaud, Alexis and Horstmann, Birger and Latz, Arnulf and Lorrmann, Henning and Meeus, Marcel and Narayan, Rekha and Pammer, Frank and Ruhland, Janna and Stein, Helge and Vegge, Tejs and Weil, Marcel},
+	title 	 = {Rechargeable Batteries of the Future—The State of the Art from a BATTERY 2030+ Perspective},
+	journal  = {Advanced Energy Materials},
+	year 	 = {2021},
+	pages 	 = {2102904},
+	doi = {https://doi.org/10.1002/aenm.202102904}
 }
