intro - done; chap 2 start

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -186,8 +186,7 @@
 	author	= {{National Coordination Office for Space-Based Positioning, Navigation, and Timing}},
 	title 	= {GPS Accuracy},
 	year 	= {2021},
-	url 	= {https://www.gps.gov/systems/gps/performance/accuracy/},
-	urldate = {2022-02-04}
+	url 	= {https://www.gps.gov/systems/gps/performance/accuracy/}
 }
 
 % Creating Autonomous Vehicle Systems - about RTK Base Stations
@@ -202,6 +201,13 @@
 }
 
 % articles about: RTK / BASE STATIONS / DRONES
+% Beyond Vision:
+@online{beRTK_2022,
+	author	= {{Beyond Vision}},
+	title 	= {beRTK},
+	year 	= {2022},
+	url 	= {https://beyond-vision.pt/bertk}
+}
 
 @ARTICLE{8955794,
 	author	= {Pini, Marco and Marucco, Gianluca and Falco, Gianluca and Nicola, Mario and De Wilde, Wim},
