--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -44,11 +44,40 @@
 
 % GPS:
 %------------------------------------------------------------------------
+@Book{fed_rad_plan_2008,
+	author	  = {{Department of Defense, Department of Homeland Security and Department of Transportation}},
+	title	  = {2008 Federal Radionavigation Plan},
+	year	  = {2008},
+	publisher = {Department of Defense, Department of Homeland Security, and
+	Department of Transportation},
+}
+
+@Book{novatel_gnss,
+	author	  = {{NovAtel Inc.}},
+	title	  = {An Introduction to GNSS},
+	year	  = {2015},
+	publisher = {NovAtel Inc.},
+}
+
+@article{euspa_news_2022,
+	title	= {Galileo Launch 11},
+	journal	= {European Union Agency for the Space Programme},
+	author	= {{European Union Agency for the Space Programme}},
+	date    = {2022-02-01},
+}% url?
+
+@article{navic_news_2016,
+	title	= {With IRNSS-1G launch, India completes and renames its navigation constellation},
+	journal	= {GPS World},
+	author	= {{GPS World Staff}},
+	date    = {2016-04-29},
+}% url? ------ latest one
+
 @Book{edseee_9101092,
 	author	  = {Groves, Paul D.},
 	title	  = {Principles of GNSS, Inertial, and Multisensor Integrated Navigation Systems, Second Edition},
-	year	  = "2013",
-	publisher = "Artech House",
+	year	  = {2013},
+	publisher = {Artech House},
 }% month = "March"; isbn = {9781608070060},
 
 @misc{ayers_geosystems_2011,
