--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -92,9 +92,9 @@
 
 @online{gps_USGov,
 	author	= {{National Coordination Office for Space-Based Positioning, Navigation, and Timing}},
-	title 	= {GPS Accuracy},
+	title 	= {The Global Positioning System},
 	year 	= {2021},
-	url 	= {https://www.gps.gov/systems/gps/performance/accuracy/}
+	url 	= {https://www.gps.gov/systems/gps/}
 }
 
 % articles about: RTK / BASE STATIONS / DRONES
@@ -204,6 +204,27 @@
 	number		= {},
 	pages		= {1-7},
 	doi			= {10.1109/NAVITEC.2012.6423099}
+}
+
+---------------------
+% LoRa:
+@INPROCEEDINGS{LoRa_8474715,
+	author	  = {Devalal, Shilpa and Karthikeyan, A.},
+	booktitle = {2018 Second International Conference on Electronics, Communication and Aerospace Technology (ICECA)}, 
+	title	  = {LoRa Technology - An Overview}, 
+	year	  = {2018},
+	pages	  = {284-290},
+	doi		  = {10.1109/ICECA.2018.8474715}
+}
+
+@ARTICLE{LoRa_ZigBee_9181518,
+	author	= {Fraile, Lidia Pocero and Tsampas, Stelios and Mylonas, Georgios and Amaxilatis, Dimitrios},
+	journal	= {IEEE Access}, 
+	title	= {A Comparative Study of LoRa and IEEE 802.15.4-Based IoT Deployments Inside School Buildings}, 
+	year	= {2020},
+	volume	= {8},
+	pages	= {160957-160981},
+	doi		= {10.1109/ACCESS.2020.3020685}
 }
 
 % Battery:
