--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -205,6 +205,14 @@
 	pages		= {1-7},
 	doi			= {10.1109/NAVITEC.2012.6423099}
 }
+---------------------
+% ZigBee:
+@Book{ZigBee_2008,
+	author	  = {Shahin Farahani},
+	title	  = {ZigBee Wireless Networks and Transceivers},
+	year	  = {2008},
+	publisher = {Elsevier},
+}
 
 ---------------------
 % LoRa:
@@ -217,6 +225,7 @@
 	doi		  = {10.1109/ICECA.2018.8474715}
 }
 
+% LoRa & ZigBee:
 @ARTICLE{LoRa_ZigBee_9181518,
 	author	= {Fraile, Lidia Pocero and Tsampas, Stelios and Mylonas, Georgios and Amaxilatis, Dimitrios},
 	journal	= {IEEE Access}, 
