chap 2 update + images

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -19,28 +19,28 @@
 	year	= {2011},
 	volume	= {52},
 	pages	= {S221 - S235}
-}
+}																% USADO!
 
 @Book{Roe1926,
 	author	  = "Joseph Wickham Roe",
 	title	  = "English and American Tool Builders",
 	year	  = "1926",
 	publisher = "McGraw-Hill Book Company, Inc.",
-}%	pages	  = {109 - 164}
+}%	pages	  = {109 - 164}										% USADO!
 
 @article{dixon_2021,
 	title	= {Siberia's wildfires are bigger than all the world's other blazes combined},
 	journal	= {The Washington Post},
 	author	= {Dixon, Robyn},
 	date    = {2021-08-11},
-}% url?
+}																% USADO!
 
 @article{roth_2021,
 	title	= {Russia forest fire damage worst since records began, says Greenpeace},
 	journal	= {The Guardian},
 	author	= {Roth, Andrew},
 	date    = {2021-09-22},
-}% url?
+}																% USADO!
 
 % GPS:
 %------------------------------------------------------------------------
@@ -50,35 +50,35 @@
 	year	  = {2008},
 	publisher = {Department of Defense, Department of Homeland Security, and
 	Department of Transportation},
-}
+}																% USADO!
 
 @Book{novatel_gnss,
 	author	  = {{NovAtel Inc.}},
 	title	  = {An Introduction to GNSS},
 	year	  = {2015},
 	publisher = {NovAtel Inc.},
-}
+}																% USADO!
 
 @article{euspa_news_2022,
 	title	= {Galileo Launch 11},
 	journal	= {European Union Agency for the Space Programme},
 	author	= {{European Union Agency for the Space Programme}},
 	date    = {2022-02-01},
-}% url?
+}																% USADO!
 
 @article{navic_news_2016,
 	title	= {With IRNSS-1G launch, India completes and renames its navigation constellation},
 	journal	= {GPS World},
 	author	= {{GPS World Staff}},
 	date    = {2016-04-29},
-}% url? ------ latest one
+}																% USADO!
 
 @Book{edseee_9101092,
 	author	  = {Groves, Paul D.},
 	title	  = {Principles of GNSS, Inertial, and Multisensor Integrated Navigation Systems, Second Edition},
 	year	  = {2013},
 	publisher = {Artech House},
-}% month = "March"; isbn = {9781608070060},
+}																% USADO!
 
 @misc{ayers_geosystems_2011,
 	place	  = {Winnipeg},
@@ -88,14 +88,14 @@
 	author	  = {Ayers, Henri B and Leica Geosystems Ltd.},
 	year	  = {2011},
 	month	  = {Jan}
-}
+}																% USADO!
 
 @online{gps_USGov,
 	author	= {{National Coordination Office for Space-Based Positioning, Navigation, and Timing}},
 	title 	= {The Global Positioning System},
 	year 	= {2021},
 	url 	= {https://www.gps.gov/systems/gps/}
-}
+}																% USADO!
 
 % articles about: RTK / BASE STATIONS / DRONES
 %------------------------------------------------------------------------
@@ -105,7 +105,7 @@
 	title 	= {beRTK},
 	year 	= {2022},
 	url 	= {https://beyond-vision.pt/bertk}
-}
+}																% USADO!
 
 % Creating Autonomous Vehicle Systems - about RTK Base Stations
 @Book{8093778,
@@ -116,7 +116,7 @@
 	number	= {},
 	pages	= {},
 	doi		= {}
-}
+}																% USADO!
 
 @ARTICLE{8955794,
 	author	= {Pini, Marco and Marucco, Gianluca and Falco, Gianluca and Nicola, Mario and De Wilde, Wim},
@@ -138,7 +138,7 @@
 	number		= {},
 	pages		= {1-4},
 	doi			= {10.1109/EURONAV.2019.8714161}
-}
+}																% USADO!
 
 @INPROCEEDINGS{9292033,
 	author		= {Matsuura, Yuta and Heming, Zhang and Kawai, Shin and Nobuhara, Hajime},
