--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -73,13 +73,6 @@
 	date    = {2016-04-29},
 }																% USADO!
 
-@Book{edseee_9101092,
-	author	  = {Groves, Paul D.},
-	title	  = {Principles of GNSS, Inertial, and Multisensor Integrated Navigation Systems, Second Edition},
-	year	  = {2013},
-	publisher = {Artech House},
-}																% USADO!
-
 @misc{ayers_geosystems_2011,
 	place	  = {Winnipeg},
 	title	  = {GNSS (GPS and GLONASS) Positioning used in Land Surveying and Engineering},
@@ -95,6 +88,28 @@
 	title 	= {The Global Positioning System},
 	year 	= {2021},
 	url 	= {https://www.gps.gov/systems/gps/}
+}																% USADO!
+
+@online{pnt_2017,
+	author	= {{U.S. Department of Transportation}},
+	title 	= {What is Positioning, Navigation and Timing (PNT)?},
+	year 	= {2017},
+	url 	= {https://www.transportation.gov/pnt/what-positioning-navigation-and-timing-pnt}
+}																% USADO!
+
+@Book{datum_2013,
+	author	  = {John R. Jensen, Ryan R. Jensen},
+	title	  = {Introductory Geographic Information Systems},
+	year	  = {2013},
+	publisher = {Pearson},
+}																% USADO!
+
+% --------- so far do texto que estou a passar a limpo, estou aqui ----------
+@Book{edseee_9101092,
+	author	  = {Groves, Paul D.},
+	title	  = {Principles of GNSS, Inertial, and Multisensor Integrated Navigation Systems, Second Edition},
+	year	  = {2013},
+	publisher = {Artech House},
 }																% USADO!
 
 % articles about: RTK / BASE STATIONS / DRONES
