--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -103,6 +103,20 @@
 	year	  = {2013},
 	publisher = {Pearson},
 }																% USADO!
+@INPROCEEDINGS{ca_p_code_1991,
+	author		= {Carl Hoefener, Bob Van Wechel},
+	booktitle	= {Proceedings of the 1991 National Technical Meeting of The Institute of Navigation}, 
+	title		= {P-Code Versus C/A-Code GPS For Range Tracking Applications}, 
+	year		= {1991},
+	pages		= {119-121},
+}																% USADO!
+
+@online{au_gov_satell,
+	author	= {{John Kennewell, Andrew McDonald}},
+	title 	= {Satellite Communications and Space Weather},
+	year 	= {2022},
+	url 	= {https://www.sws.bom.gov.au/Educational/1/3/2}
+}																% USADO!
 
 % --------- so far do texto que estou a passar a limpo, estou aqui ----------
 @Book{edseee_9101092,
