index + chap 2 update

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -118,6 +118,19 @@
 	url 	= {https://www.sws.bom.gov.au/Educational/1/3/2}
 }																% USADO!
 
+@Book{kaplan_2017,
+	author	  = {Kaplan, Elliott and Hegarty, Christopher},
+	title	  = {Understanding GPS/GNSS: Principles and Applications, Third Edition},
+	year	  = {2017},
+	publisher = {Artech House},
+}																% USADO!
+
+@online{inside_GNSS,
+	author	= {{Inside GNSS}},
+	title 	= {Generating Carrier Phase Measurements},
+	year 	= {2010},
+	url 	= {https://insidegnss.com/generating-carrier-phase-measurements/}
+}																% USADO!
 % --------- so far do texto que estou a passar a limpo, estou aqui ----------
 @Book{edseee_9101092,
 	author	  = {Groves, Paul D.},
