--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -132,7 +132,7 @@
 	url 	= {https://insidegnss.com/generating-carrier-phase-measurements/}
 }																% USADO!
 % --------- so far do texto que estou a passar a limpo, estou aqui ----------
-@Book{edseee_9101092,
+@Book{groves_2008,
 	author	  = {Groves, Paul D.},
 	title	  = {Principles of GNSS, Inertial, and Multisensor Integrated Navigation Systems, Second Edition},
 	year	  = {2013},
