--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -131,7 +131,7 @@
 	year 	= {2010},
 	url 	= {https://insidegnss.com/generating-carrier-phase-measurements/}
 }																% USADO!
-% --------- so far do texto que estou a passar a limpo, estou aqui ----------
+
 @Book{groves_2008,
 	author	  = {Groves, Paul D.},
 	title	  = {Principles of GNSS, Inertial, and Multisensor Integrated Navigation Systems, Second Edition},
@@ -139,6 +139,22 @@
 	publisher = {Artech House},
 }																% USADO!
 
+@online{sbas_euspa_2021,
+	author	= {{European Union Agency for the Space Programme}},
+	title 	= {{What is SBAS?}},
+	year 	= {2021},
+	url 	= {https://www.euspa.europa.eu/european-space/eu-space-programme/what-sbas}
+}
+
+@article{a_sbas_2021,
+	title	= {{Joint venture expands SBAS for business development in Africa}},
+	journal	= {GPS World},
+	author	= {Tracy Cozzens},
+	date    = {2021-07-23},
+}	
+https://www.gpsworld.com/joint-venture-expands-sbas-for-business-development-in-africa/
+
+% --------- so far do texto que estou a passar a limpo, estou aqui ----------
 % articles about: RTK / BASE STATIONS / DRONES
 %------------------------------------------------------------------------
 % Beyond Vision:
