--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -144,15 +144,31 @@
 	title 	= {{What is SBAS?}},
 	year 	= {2021},
 	url 	= {https://www.euspa.europa.eu/european-space/eu-space-programme/what-sbas}
-}
+}																% USADO!
 
 @article{a_sbas_2021,
 	title	= {{Joint venture expands SBAS for business development in Africa}},
 	journal	= {GPS World},
 	author	= {Tracy Cozzens},
 	date    = {2021-07-23},
-}	
-https://www.gpsworld.com/joint-venture-expands-sbas-for-business-development-in-africa/
+}																% USADO!	
+
+@misc{ReNEP_ppt_2018,
+	place	  = {Amsterdam},
+	title	  = {{National Report of Portugal}},
+	journal	  = {{Symposium of the IAG Subcommission for Europe (EUREF)}},
+	publisher = {EUREF},
+	author	  = {{Department of Geodesy of the Portuguese Directorate-General for Territory}},
+	year	  = {2018},
+	month	  = {May}
+}																% USADO!	
+
+@inproceedings{rtcm_2003,
+	author 	= {Soares, Manuel and Malheiro, Benedita and Restivo, Francisco},
+	year 	= {2003},
+	month 	= {01},
+	title 	= {{A Distributed System for the Dissemination of DGPS Data through the Internet}}
+}																% USADO!
 
 % --------- so far do texto que estou a passar a limpo, estou aqui ----------
 % articles about: RTK / BASE STATIONS / DRONES
