--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -170,6 +170,14 @@
 	title 	= {{A Distributed System for the Dissemination of DGPS Data through the Internet}}
 }																% USADO!
 
+% NTRIP___________________________________
+@article{ntrip_agleader,
+	title	= {{NTRIP/CORS: How it works and what is involved}},
+	journal	= {Ag Leader},
+	author	= {Ag Leader},
+	date    = {2019-07-26},
+}		
+
 % --------- so far do texto que estou a passar a limpo, estou aqui ----------
 % articles about: RTK / BASE STATIONS / DRONES
 %------------------------------------------------------------------------
