--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -163,11 +163,18 @@
 	month	  = {May}
 }																% USADO!	
 
-@inproceedings{rtcm_2003,
+@inproceedings{rtcm_tuga,
 	author 	= {Soares, Manuel and Malheiro, Benedita and Restivo, Francisco},
 	year 	= {2003},
 	month 	= {01},
 	title 	= {{A Distributed System for the Dissemination of DGPS Data through the Internet}}
+}																% USADO!
+
+@inproceedings{rtcm_china,
+	author = {Heo, Yong and Yan, Thomas and Lim, Samsung and Rizos, Chris},
+	year   = {2009},
+	month  = {01},
+	title  = {International standard GNSS real-time data formats and protocols}
 }																% USADO!
 
 % NTRIP___________________________________
@@ -177,6 +184,13 @@
 	author	= {Ag Leader},
 	date    = {2019-07-26},
 }		
+
+@article{rtcm_cheat_sheet,
+	title	= {{An RTCM 3 message cheat sheet}},
+	journal	= {{SNIP Knowledge Base}},
+	author	= {Support},
+	date    = {2016-03-15},
+}	
 
 % --------- so far do texto que estou a passar a limpo, estou aqui ----------
 % articles about: RTK / BASE STATIONS / DRONES
