--- a/Config/7_packages.tex
+++ b/Config/7_packages.tex
@@ -36,8 +36,10 @@
 \usepackage{xcolor}
 \usepackage{enumerate}
 \usepackage{lipsum}
-\usepackage[notransparent]{svg} % usar isto para imagens .svg
+\usepackage{svg}
+%\usepackage[notransparent]{svg} % usar isto para imagens .svg
 \usepackage{amsmath}            % usar isto para imagens .svg
+\usepackage[justification=centering]{caption}
 \usepackage{mathtools}
 \usepackage{float}
 \usepackage{array}
