--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -111,6 +111,14 @@
 	pages		= {119-121},
 }																% USADO!
 
+@ARTICLE{ieee_terms_1997,
+	author	={},
+	journal	={IEEE Std 211-1997}, 
+	title	={IEEE Standard Definitions of Terms for Radio Wave Propagation}, 
+	year	={1998},
+	doi		={10.1109/IEEESTD.1998.87897}
+}
+
 @online{au_gov_satell,
 	author	= {{John Kennewell, Andrew McDonald}},
 	title 	= {Satellite Communications and Space Weather},
