gantt table start

--- a/Config/5_cover.tex
+++ b/Config/5_cover.tex
@@ -14,7 +14,7 @@
 % Thesis/Dissertation title (valid for all languages unless redefined as below)
 %   syntax: \nttitle[lang]{title}
 \nttitle[en]{Design and implementation of\\a low-power RTK positioning\\base station for precise navigation}%
-\nttitle[pt]{     falta meter aqui    }                         % é preciso meter?
+%\nttitle[pt]{     falta meter aqui    }                         % é preciso meter?
 %   \nttitle{A Very Long and Impressive Thesis Title}%
 %   \nttitle[en]{The title in a Specific language}%
 
@@ -83,7 +83,7 @@
 %   use [f] for female and [m] for male
 %   use "\\" to break the lines in the appropriate place
 %   syntax: \ntaddperson{coadviser}[gender]{Name, Position, School}
-%\ntaddperson{coadviser}[m]{John Doe Co-Adviser Name, Associate Professor, NOVA University Lisbon}       % pedro lousã
+\ntaddperson{coadviser}[m]{Pedro Miguel da Conceição Santos Lousã, Chief Operating Officer, Beyond Vision}       % pedro lousã
 %\ntaddperson{coadviser}[m]{John Doe other Co-Adviser Name, Full Professor, NOVA University Lisbon}      % andré?
 
 %%------------------------------------------------------------
