--- a/Config/7_packages.tex
+++ b/Config/7_packages.tex
@@ -37,6 +37,7 @@
 \usepackage{enumerate}
 \usepackage{lipsum}
 \usepackage{svg}
+\usepackage{hhline}
 %\usepackage[notransparent]{svg} % usar isto para imagens .svg
 \usepackage{amsmath}            % usar isto para imagens .svg
 \usepackage[justification=centering]{caption}
