abstract/resumo DONE

--- a/Config/1_novathesis.tex
+++ b/Config/1_novathesis.tex
@@ -89,7 +89,7 @@
 %%------------------------------------------------------------
 %% THE LESS IMPORTANT/POPULAR OPTIONS
 %%------------------------------------------------------------
-\ntsetup{docstatus=working}   % The status of the document
+\ntsetup{docstatus=final}   % The status of the document
 %                               %     [ final, provisional, draft, working ]
 %                               % DEFAULT: docstatus=final
 
